--- a/static/account.html
+++ b/static/account.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Home</title>
         <link rel="stylesheet" href="tailwindcss" />
-        <link rel="stylesheet" href="css/account.css" />
     </head>
     <body>
         <span>test</span>
